2006-02-15  Johan Dahlin  <jdahlin@async.com.br>

	* kiwi/ui/comboentry.py:
	* kiwi/utils.py:
	* tests/test_gazpacholoader.py:
	* tests/test_utils.py:

	2.6 compatibility added

2006-02-15  Johan Dahlin  <jdahlin@async.com.br>

	* kiwi/utils.py (PropertyMeta._update_bases): Make sure subclassing 
	of a combobox works

	* tests/test_utils.py (Subclassing.testCombo): Add a test for this

	* gazpacho-plugin/kiwiwidgets.xml:
	* kiwi/ui/comboboxentry.py:
	* kiwi/ui/comboentry.py:
	* kiwi/ui/combomixin.py:
	* kiwi/ui/gazpacholoader.py:
	* kiwi/ui/widgets/combo.py:
	* kiwi/ui/widgets/combobox.py:
	* kiwi/ui/widgets/list.py:
	* tools/glade_conversor.py:

	Refactor combos, beginning of gazpacho/proxy support for comboentry.

2006-02-14  Johan Dahlin  <jdahlin@async.com.br>

	* examples/framework/news/news2.py:
	* examples/framework/news/news3.py:
	* examples/framework/news/news4.py:
	* examples/list/editable.py:
	* examples/list/kitchensink.py:
	* examples/list/radio.py:
	* examples/list/searchbar.py:
	* examples/list/simple.py:
	* examples/list/sortable.py:
	* examples/list/stockicon.py:
	* gazpacho-plugin/kiwiwidgets.xml:
	* kiwi/ui/gazpacholoader.py:
	* kiwi/ui/objectlist.py:
	* kiwi/ui/test/listener.py:
	* kiwi/ui/widgets/list.py:
	* tests/test_List.py:
	* tests/test_ObjectList.py:
	* tools/glade_conversor.py:

	Rename List to ObjectList and move it to kiwi.ui.
	Update examples, tests, callsites and conversion helpers.
	Keep a backwards compatibility layer.

2006-02-14  Johan Dahlin  <jdahlin@async.com.br>

	* tests/test_utils.py: Add tests for various scenarios

	* kiwi/python.py: Use __init__ instead of __new__ in 
	ClassInittableMetaType.

	* kiwi/utils.py: Simplify, make sure the GObject Meta class
	registers the GType instead of ourselves. That's the only way
	to make it honor __gtype_name__ in PyGTK 2.8.x. Remove
	some backwards compatibility code. And add a hack to make
	it pickup signals and properties.

2006-02-13  Johan Dahlin  <jdahlin@async.com.br>
